feat: Implement core interactive game application with Gemini AI integration, FastAPI routes, data models, persistence, and comprehensive testing infrastructure.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 GOOGLE_API_KEY=your-gemini-api-key-here
+GCP_PROJECT_ID=your-gcp-project-id
 PORT=8080
+ENABLE_FIRESTORE=false
+ENABLE_TTS=false
+FIRESTORE_COLLECTION=games
+RATE_LIMIT_PER_MINUTE=60
