--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,10 +28,13 @@ steps:
       - '--cpu=1'
       - '--min-instances=0'
       - '--max-instances=10'
-      - '--set-env-vars=ENABLE_FIRESTORE=true,ENABLE_TTS=true'
+      - '--set-env-vars=ENABLE_FIRESTORE=true,ENABLE_TTS=true,GOOGLE_API_KEY=${_GOOGLE_API_KEY}'
 
 images:
   - 'gcr.io/$PROJECT_ID/questforge:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/questforge:latest'
+
+substitutions:
+  _GOOGLE_API_KEY: ''
 
 timeout: 1200s
